codegen/ui_tests/rhai_fn_index_getter_multiple.stderr
error: conflicting index_get
  --> ui_tests/rhai_fn_index_getter_multiple.rs:12:40
   |
12 |     #[rhai_fn(name = "foo", index_get, index_get)]
   |                                        ^^^^^^^^^
